# beattheweather

./: Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: collect.yml  initial-backfill.yml  market-history-backfill.yml  test.yml
UPLOAD_TO_GITHUB/: Makefile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
UPLOAD_TO_GITHUB/src/weatherman/: analytics.py  providers.py  service.py  settings.py
UPLOAD_TO_GITHUB/src/weatherman/data/: airports.json
UPLOAD_TO_GITHUB/tests/: test_settings.py
config/: airports.json
data/: weatherman.db
src/weatherman/: __init__.py  analytics.py  cli.py  db.py  metar_live.py  nowcast.py  providers.py  service.py  settings.py  taf.py
src/weatherman/data/: airports.json
src/weatherman_trading.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_analytics.py  test_metar_live.py  test_nowcast.py  test_providers.py  test_service.py  test_settings.py  test_taf.py
