[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherman-trading"
version = "9.3.0"
description = "Model consensus, nowcast and backtesting for daily maximum-temperature markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx[socks]>=0.27,<1",
  "pandas>=2.2,<3",
  "plotly>=5.22,<7",
  "python-dotenv>=1.0,<2",
  "streamlit>=1.59,<2",
  "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5,<1"]

[project.scripts]
weatherman = "weatherman.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
weatherman = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".deps", ".venv"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]
